1998-06-28  Raja R Harinath  <harinath@cs.umn.edu>

	* clients.c (wait_for_clients_and_data): Return 0.
	(get_new_clients): Remove validation code.  Moved to
	`poll_client_requests' (in proto.c).	
	* proto.c: (esd_proto_lock): Likewise.
	(esd_proto_unlock): Likewise.
	(esd_proto_standby): Likewise.
	(esd_proto_resume): Likewise.
	(poll_client_requests): Centralize validation.  Move invocation of
	`esd_proto_{lock,unlock,standby,resume}' ...
	(do_validated_action): ... here.

	* esd-server.h (struct esd_client): New flag `need_validation'.

	* esdlib.c (esd_lock): Send `ESD_PROTO_LOCK' message, not
	`ESD_PROTO_UNLOCK'. 

1998-06-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* mix.c: removed core-dump causing optimization, thx to keebler.

1998-06-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* players.c: one-liner uninitialized data fix for the occasional
 	random sample killing itself.  Thanks to Chutt for the fix.

1998-06-10  Yo Ric Dude  <ericmit@ix.netcom.com>

	* samples.c, players.c, clients.c: fixed the perpetual looping
	sample problem.  incremented version to 0.2.2 for possible release.

1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* samples.c, players.c, clients.c: rigged up the sample freeing
	routines to check reference counts before deleting the samples.

1998-06-06  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd.h, esd-server.h: moved some server stuff to esd-server.h.
	also added placeholders for an ADPCM mode, and endian issues.

	* samples.c: tuned the check for sample_id in stop_sample()

	* players.c: set up free_sample as the central player "destructor"

	* mix.c: added integral ratio of sample rates optimization.

1998-06-05  Myth  <frb@umr.edu>

	* esd.h: removed reference to config.h.

	* audio.c: added reference to config.h.

	* Makefile.in,aclocal.m4,config.h.in,configure,COPYING,INSTALL,
	config.guess,config.sub,install-sh,ltconfig,ltmain.sh,missing,
	mkinstalldirs: removed from cvs tree, since they are added by
	aclocal/auto*.
