@@ -11,75 +11,71 @@ ALport audioport;
 #define ARCH_esd_audio_open
 int esd_audio_open()
 {
-    ALport audioport;
     ALconfig audioconfig;
-    long pvbuf[] = { AL_OUTPUT_COUNT, 0, AL_MONITOR_CTL, 0, AL_OUTPUT_RATE, 0 };
-    char mode[5];
-    
     audioconfig = ALnewconfig();
-    
+  
     if (!audioconfig) {
-	fprintf(stderr,"not enough mem to init audio\n");
 	esd_audio_fd = -1;
-	return -1;
-    }
+	return esd_audio_fd;
+    } else {
+	long pvbuf[] = { AL_OUTPUT_COUNT, 0, AL_MONITOR_CTL, 0, AL_OUTPUT_RATE, 0};
     
-    if (ALgetparams(AL_DEFAULT_DEVICE, pvbuf, 6) < 0)
-	if (oserror() == AL_BAD_DEVICE_ACCESS) {
-            fprintf(stderr,"AL_DEFAULT_DEVICE no good");
+	if (ALgetparams(AL_DEFAULT_DEVICE, pvbuf, 6) < 0)
+	    if (oserror() == AL_BAD_DEVICE_ACCESS) {
+		esd_audio_fd = -1;
+		return esd_audio_fd;
+	    }
+    
+	if (pvbuf[1] == 0 && pvbuf[3] == AL_MONITOR_OFF) {
+	    long al_params[] = { AL_OUTPUT_RATE, 0};
+      
+	    al_params[1] = esd_audio_rate;
+	    ALsetparams(AL_DEFAULT_DEVICE, al_params, 2);
+	} else
+	    if (pvbuf[5] != esd_audio_rate) {
+		printf("audio device is already in use with wrong sample output rate\n");
+		esd_audio_fd = -1;
+		return esd_audio_fd;
+	
+	    }
+    
+	/* ALsetsampfmt(audioconfig, AL_SAMPFMT_TWOSCOMP); this is the default */
+	/* ALsetwidth(audioconfig, AL_SAMPLE_16); this is the default */
+    
+	if ( (esd_audio_format & ESD_MASK_CHAN) == ESD_MONO)
+	    ALsetchannels(audioconfig, AL_MONO);
+	/* else ALsetchannels(audioconfig, AL_STEREO); this is the default */
+
+	ALsetqueuesize(audioconfig, ESD_BUF_SIZE * 2);
+    
+	audioport = ALopenport("esd", "w", audioconfig);
+	if (audioport == (ALport) 0) {
+	    switch (oserror()) {
+	    case AL_BAD_NO_PORTS:
+		printf( "system is out of ports\n");
+		esd_audio_fd = -1;
+		return esd_audio_fd;
+		break;
+	
+	    case AL_BAD_DEVICE_ACCESS:
+		printf("couldn't access audio device\n");
+		esd_audio_fd = -1;
+		return esd_audio_fd;
+		break;
+	
+	    case AL_BAD_OUT_OF_MEM:
+		printf("out of memory\n");
+		esd_audio_fd = -1;
+		return esd_audio_fd;
+		break;
+	    }
+	    /* don't know how we got here, but it must be bad */
 	    esd_audio_fd = -1;
-	    return -1;
-    }
-    
-    if (pvbuf[1] == 0 && pvbuf[3] == AL_MONITOR_OFF) {
-	long al_params[] = { AL_OUTPUT_RATE, 0 };
-    	al_params[1] = esd_audio_rate;
-        ALsetparams(AL_DEFAULT_DEVICE, al_params, 2);
-    }
-    else if (pvbuf[5] != esd_audio_rate) {
-	    fprintf(stderr,"audio device already open with incompatible sample rate\n");
-            esd_audio_fd = -1;
-            return -1;
-    }
-    
-    if ((esd_audio_format & ESD_MASK_CHAN) != ESD_STEREO)
-	ALsetchannels(audioconfig, AL_MONO);
-    
-    if ((esd_audio_format & ESD_MASK_BITS) != ESD_BITS16)
-	ALsetwidth(audioconfig, AL_SAMPLE_8); /* FIXME: is this right? */    
-    
-    ALsetqueuesize(audioconfig, ESD_BUF_SIZE*2);
-
-    /*
-     * FIXME: I'm completely guessing here...  - Isaac 
-     */
-    if ((esd_audio_format & ESD_MASK_FUNC) == ESD_RECORD) 
-	strcpy(mode, "rw");
-    else
-	strcpy(mode, "w"); 
-    
-    audioport = ALopenport("esd", mode, audioconfig);
-    if (audioport == (ALport)0) {
-	switch (oserror()) {
-	case AL_BAD_NO_PORTS:
-	    fprintf(stderr,"System is out of ports\n");
-	    break;
-	case AL_BAD_DEVICE_ACCESS:
-	    fprintf(stderr,"Coupldn't access audio device\n");
-	    break;
-	case AL_BAD_OUT_OF_MEM:
-	    fprintf(stderr,"Out of memory..\n");
-	    break;
-	default:
-	    fprintf(stderr,"Unknown error..  BOOM\n");
-	    break;
+	    return esd_audio_fd;
 	}
-        esd_audio_fd = -1;
-        return -1;
+	ALsetfillpoint(audioport, ESD_BUF_SIZE);
     }
 
-    ALsetfillpoint(audioport, ESD_BUF_SIZE);
-    
     esd_audio_fd = ALgetfd(audioport);
     return esd_audio_fd;
 }
@@ -89,9 +85,9 @@ void esd_audio_close()
 {
     if (esd_audio_fd >= 0) {
 	fd_set write_fds;
-        FD_ZERO(&write_fds);
-        FD_SET(esd_audio_fd, &write_fds);	
-	
+	FD_ZERO(&write_fds);
+	FD_SET(esd_audio_fd, &write_fds);	
+    
 	ALsetfillpoint(audioport, ESD_BUF_SIZE * 2);
 	select(esd_audio_fd + 1, NULL, &write_fds, NULL, NULL);
     }
@@ -103,8 +99,8 @@ void esd_audio_close()
 int esd_audio_write(void *buffer, int buf_size)
 {
     if (ALwritesamps(audioport, buffer, buf_size / 2) == 0) {
-        ALsetfillpoint(audioport, ESD_BUF_SIZE);
-        return buf_size;
+	ALsetfillpoint(audioport, ESD_BUF_SIZE);
+	return buf_size;
     }
     else
 	return 0;    
@@ -125,4 +121,3 @@ int esd_audio_read(void *buffer, int buf_size)
 void esd_audio_flush()
 {
 }
-
